# FAengine

./: .gitignore  README.md  pyproject.toml  pytest.ini
faengine/: __init__.py  engine.py  settings.py
faengine/backend/: formatters.py  readers.py
testing/: test_accord.py  test_sfx.py
testing/testdata/: Const.Clim.09
